[gd_scene load_steps=19 format=3 uid="uid://b4vs1v57h2d8s"]

[ext_resource type="Texture2D" uid="uid://bxi2pq65pjs6y" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/DamageLvlButton.png" id="1_3nsgu"]
[ext_resource type="Script" uid="uid://dgswc3xu6f5ks" path="res://Scripts/UI/tower_leveling_system.gd" id="1_rvch5"]
[ext_resource type="Texture2D" uid="uid://denw7wbd2eva3" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/SpeedLvlButton.png" id="2_1cxqr"]
[ext_resource type="Texture2D" uid="uid://dhnpvnvw2yiny" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/DamageLvlButtonPressed.png" id="2_rvch5"]
[ext_resource type="Texture2D" uid="uid://bipcj5m5jcoc3" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/DamageLvlButtonHover.png" id="3_0eolr"]
[ext_resource type="Texture2D" uid="uid://dfs6nabwhy564" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/SpeedLvlButtonPressed.png" id="3_k5twe"]
[ext_resource type="Texture2D" uid="uid://k13h4bi8cx7d" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/SpeedLvlButtonHover.png" id="4_wtswq"]
[ext_resource type="Texture2D" uid="uid://dlsnhpfdvh38c" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/DamageLvlButtonDisabled.png" id="5_0eolr"]
[ext_resource type="Texture2D" uid="uid://c1u3b6mtglshv" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/SpeedLvlButtonDisabled.png" id="5_o21tc"]
[ext_resource type="Texture2D" uid="uid://ddgpiisg40mqt" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/RangeLvlButton.png" id="10_ked84"]
[ext_resource type="Texture2D" uid="uid://mo51rylimpha" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/RangeLvlButtonPressed.png" id="11_xm277"]
[ext_resource type="Texture2D" uid="uid://cafuy3rd78j3o" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/RangeLvlButtonHover.png" id="12_0oam0"]
[ext_resource type="Texture2D" uid="uid://u828p4wmge37" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/RangeLvlButtonDisabled.png" id="13_dijcn"]
[ext_resource type="Texture2D" uid="uid://b62xls4adqp1h" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/SellButton.png" id="14_02wwt"]
[ext_resource type="Texture2D" uid="uid://b2ho6a77251w7" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/SellButtonPressed.png" id="15_sj1nv"]
[ext_resource type="Texture2D" uid="uid://sllesgmhn65g" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/SellButtonHover.png" id="16_lhwxi"]
[ext_resource type="Texture2D" uid="uid://4272vxlnjwhn" path="res://Art/VisualArt/UI/Buttons/TowerLeveling/SellButtonDisabled.png" id="17_lxfy0"]
[ext_resource type="FontFile" uid="uid://c3sky53vd0g4j" path="res://Art/VisualArt/UI/Fonts/Varnished.ttf" id="18_k5twe"]

[node name="TowerLevelingSystem" type="Control"]
visible = false
z_index = 1001
layout_mode = 3
anchors_preset = 0
offset_left = 128.0
offset_top = 48.0
offset_right = 128.0
offset_bottom = 48.0
mouse_filter = 2
script = ExtResource("1_rvch5")
attack_speed_value_1 = 0.1
attack_speed_value_2 = 0.1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -128.0
offset_top = -56.0
offset_right = 132.0
offset_bottom = 464.0

[node name="HBoxContainer" type="FlowContainer" parent="Panel"]
layout_mode = 0
offset_top = 184.0
offset_right = 260.0
offset_bottom = 512.0

[node name="AttackspeedLevelUp" type="TextureButton" parent="Panel/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(128, 157)
layout_mode = 2
texture_normal = ExtResource("2_1cxqr")
texture_pressed = ExtResource("3_k5twe")
texture_hover = ExtResource("4_wtswq")
texture_disabled = ExtResource("5_o21tc")

[node name="Label" type="Label" parent="Panel/HBoxContainer/AttackspeedLevelUp"]
layout_mode = 0
offset_left = 27.0
offset_top = 107.0
offset_right = 103.0
offset_bottom = 130.0
text = "Speed Up"

[node name="Label2" type="Label" parent="Panel/HBoxContainer/AttackspeedLevelUp"]
layout_mode = 0
offset_left = 27.0
offset_top = 131.0
offset_right = 103.0
offset_bottom = 154.0
text = "cost"

[node name="DamageLevelUp" type="TextureButton" parent="Panel/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("1_3nsgu")
texture_pressed = ExtResource("2_rvch5")
texture_hover = ExtResource("3_0eolr")
texture_disabled = ExtResource("5_0eolr")

[node name="Label" type="Label" parent="Panel/HBoxContainer/DamageLevelUp"]
layout_mode = 0
offset_left = 23.0
offset_top = 107.0
offset_right = 99.0
offset_bottom = 130.0
text = "Attack Up"

[node name="Label2" type="Label" parent="Panel/HBoxContainer/DamageLevelUp"]
layout_mode = 0
offset_left = 23.0
offset_top = 131.0
offset_right = 99.0
offset_bottom = 154.0
text = "cost"

[node name="RangeLevelUp" type="TextureButton" parent="Panel/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("10_ked84")
texture_pressed = ExtResource("11_xm277")
texture_hover = ExtResource("12_0oam0")
texture_disabled = ExtResource("13_dijcn")

[node name="Label" type="Label" parent="Panel/HBoxContainer/RangeLevelUp"]
layout_mode = 0
offset_left = 27.0
offset_top = 107.0
offset_right = 103.0
offset_bottom = 130.0
text = "Range up"

[node name="Label2" type="Label" parent="Panel/HBoxContainer/RangeLevelUp"]
layout_mode = 0
offset_left = 27.0
offset_top = 131.0
offset_right = 103.0
offset_bottom = 154.0
text = "cost"

[node name="SellTower" type="TextureButton" parent="Panel/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("14_02wwt")
texture_pressed = ExtResource("15_sj1nv")
texture_hover = ExtResource("16_lhwxi")
texture_disabled = ExtResource("17_lxfy0")

[node name="Label" type="Label" parent="Panel/HBoxContainer/SellTower"]
layout_mode = 0
offset_left = 27.0
offset_top = 107.0
offset_right = 103.0
offset_bottom = 130.0
text = "Sell tower"

[node name="Label2" type="Label" parent="Panel/HBoxContainer/SellTower"]
layout_mode = 0
offset_left = 27.0
offset_top = 131.0
offset_right = 103.0
offset_bottom = 154.0
text = "price"

[node name="StatsLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 240.0
offset_bottom = 184.0
theme_override_fonts/normal_font = ExtResource("18_k5twe")
text = "asdsdsdasdasd"

[connection signal="button_down" from="Panel/HBoxContainer/AttackspeedLevelUp" to="." method="_on_attackspeed_level_up_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/DamageLevelUp" to="." method="_on_damage_level_up_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/RangeLevelUp" to="." method="_on_range_level_up_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/SellTower" to="." method="_on_sell_tower_button_down"]
[connection signal="pressed" from="Panel/HBoxContainer/SellTower" to="." method="_on_sell_tower_pressed"]
